fix(ui): ui fix on homepage/global styling - apply gradient to background - homepage align button on all compatible screen sizes - change title fonts - fix h1/h2 title sizes

--- a/client/src/styles/RoomView.css
+++ b/client/src/styles/RoomView.css
@@ -11,7 +11,7 @@
 .player {
 	border: 3px solid var(--black);
 	width: 341px;
-	height: 70px;
+	height: 100px;
 	margin: auto;
 	list-style-type: none;
 	font-family: "Roboto", serif;
