--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -8,36 +8,55 @@
 	--primary: #1900d8;
 	--secondary: #e3170a;
 	--secondary-light: #e4572e;
-	--gold: #bfab25;
+	--gold: #fafa03;
 	--black: #080f0f;
 	--grey: #9aa0a8;
 }
 
 body {
-	background-color: var(--primary);
+	min-height: 100vh;
+	background: #080045;
+	background: -moz-linear-gradient(top, #1900d8 0%, #080045 100%);
+	background: -webkit-linear-gradient(top, #1900d8 0%, #080045 100%);
+	background: linear-gradient(to bottom, #1900d8 0%, #080045 100%);
+	transform: translateZ(0);
+	backface-visibility: hidden;
+	will-change: transform, opacity;
 }
 
 h1 {
 	color: var(--secondary);
 	-webkit-text-stroke: 1px black;
-	font-size: 88px;
-	font-family: "Rubik Mono One", serif;
+	font-size: 128px;
+	font-family: "Press Start 2P", serif;
 	font-weight: 400;
 	font-style: normal;
 }
 
 h2 {
-	font-family: "Roboto", serif;
-	color: #fff;
-	font-weight: bold;
-	font-size: 32px;
+	font-family: "Press Start 2P", serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 64px;
 }
 
 h3 {
 	font-family: "Roboto", serif;
 	color: #fff;
+	font-weight: bold;
+	font-size: 32px;
+
+	font-family: "Roboto", serif;
+	color: #fff;
 	font-weight: normal;
 	font-size: 24px;
+}
+
+h4 {
+	font-family: "Roboto", serif;
+	color: #fff;
+	font-weight: bold;
+	font-size: 32px;
 }
 
 p {
